main.scss
// Custom variables
$main-text-color: white;
$background-color: #181743;

//===========================
// Button
//===========================
$button-primary-background: #f70170;

//===========================
// Fonts
//===========================
@font-face {
    font-family: "Athelas";
    src:url("../fonts/Athelas.ttc");
}

//===========================
// Grid
//===========================
$grid-large-gutter-horizontal-l: 300px;
$grid-large-gutter-vertical-l: 100px;

$grid-medium-gutter-horizontal: 140px;
$grid-medium-gutter-vertical: 90px;

//===========================
// Logo
//===========================
$logo-color: white;
$logo-hover-color: white;

$global-font-family: 'Work Sans', sans-serif;
$base-heading-font-family: 'Athelas', sans-serif;

//===========================
// Navbar
//===========================
$navbar-background: $background-color;

$navbar-nav-item-padding-horizontal: 30px;
$navbar-nav-item-color: white;
$navbar-nav-item-font-size: 16px;
$navbar-nav-item-font-family: 'Work Sans';
$navbar-nav-item-hover-color: white;
$navbar-nav-item-onclick-color: white;
$navbar-nav-item-active-color: white;

$navbar-item-color: white;


// Import default variables and available mixins.
@import "uikit/src/scss/variables-theme.scss";
@import "uikit/src/scss/mixins-theme.scss";



// Custom mixin overwrites.
//===========================
// Navbar
//===========================
@mixin hook-navbar{
    text-transform: capitalize;
    font-weight: 500;
}

@mixin hook-navbar-nav-item-active(){
    span{
        padding-top:2px;
        border-bottom: 2px solid $main-text-color;
    }
}

@mixin hook-navbar-nav-item-hover(){
    span{
        padding-top:2px;
        border-bottom: 2px solid $main-text-color;
    }
}

//===========================
// Button
//===========================
@mixin hook-button(){
    font-size: 18px;
    width: 180px;
    border-radius: 40px;
}


// Import UIkit.
@import "uikit/src/scss/uikit-theme.scss";


//Custom CSS
//===========================
// Global
//===========================
body{
    background: $background-color;
    color: white;
    font-size: 18px;
}

h1{
    color: white;
    font-size: 62px;
}

h2{
    color: #e65cd7;
}

hr{
    border: 0;
    height: 3px;
    background-image: linear-gradient(to right, #ff007b, #910a65, #4b115e, #2b1c5d);
}

.main-container{
    //padding-top: 20px;
    padding-bottom: 40px;
}

.subtitle{
    letter-spacing: 12px;
    font-size: 16px;
    font-weight: 500;
}

.section-container{
    padding-top: 140px;
}

//===========================
// Navbar
//===========================
.nav-logo{
    width: 38%;
    height: auto;
}

//===========================
// Landing
//===========================
.landing-date{
    color: #e65cd7;
    font-size: 20px;
}

//===========================
// About
//===========================
.about-header{
    margin-top: 0px;
}

.about-date{
    color: #e65cd7;
    font-size: 16px;
}

//===========================
// Speakers
//===========================
.speaker-header{
    font-size: 55px;
}

//===========================
// Schedule
//===========================
.schedule-container{
    padding-top: 40px;
}

.schedule-header{
    font-size: 44px;
    padding: 0;
    margin:0;
}

.schedule-date{
    font-size: 18px;
    color: #e65cd7;
}

.schedule-day{
    letter-spacing: 8px;
    font-size: 24px;
    font-weight: 500;
}

.schedule-day-number{
    font-size:58px;
    font-weight: bold;
}

//===========================
// Sponsors
//===========================


//===========================
// Footer
//===========================
.footer-hr{
    
}

